--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python 3.x
       uses: actions/setup-python@v5
       with:
         python-version: '3.x'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # If you have a requirements.txt file
         pip install flake8 black
+
     - name: Lint with Flake8
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -28,14 +31,15 @@ jobs:
           echo "Flake8 found issues."
           exit 1
         fi
+
     - name: Format with Black
       run: |
         black --check .
-        exit-code=$?
-        if [[ $exit_code -ne 0 ]]; then
+        if [[ $? -ne 0 ]]; then
           echo "Black found formatting issues. Please run 'black .' locally."
           exit 1
         fi
+
     - name: Run tests (if you have any)
       run: |
         # Example command to run tests (adjust as needed)
